--- a/aplication/templates/admin/admin_start_page.html
+++ b/aplication/templates/admin/admin_start_page.html
@@ -24,6 +24,10 @@
                 <button class="button-big">Wyślij wiadomość</button>
             </a>
             <br><br>
+            <a href="admin/company_info">
+                <button class="button-big">Edytuj informacje o firmie</button>
+            </a>
+            <br><br>
             <a href="/">
                 <button class="button-big">Wyświetl strone jako klient</button>
             </a>
