--- a/aplication/templates/customer/data_edit.html
+++ b/aplication/templates/customer/data_edit.html
@@ -15,7 +15,7 @@
             
             <form method="POST" , enctype="multipart/form-data" action='/data_edit'>
                 
-                <input type="hidden" id="username" name="username" value="$username">
+                <input type="hidden" id="username" name="username" value="{{ username }}">
                 <br><br>
                 <label for="password">Hasło:</label><br>
                 <input type="password" id="password" name="password">
