--- a/aplication/templates/customer/info.html
+++ b/aplication/templates/customer/info.html
@@ -13,10 +13,10 @@
     <body class="padlogin">
 
         <div class="center">
-            <h1>$info</h1>
+            <h1>{{ info }}</h1>
             
             
-            <a href="/$href">
+            <a href="/{{ href }}">
                 <button class="button">Powrót</button>
             </a>
         </div>
