--- a/aplication/templates/customer/login_page.html
+++ b/aplication/templates/customer/login_page.html
@@ -15,7 +15,7 @@
         <div class="center">
             <h1>Zaloguj się</h1>
             
-            <form method="POST", action='/logIn' enctype="multipart/form-data">
+            <form method="POST", action='/login_page' enctype="multipart/form-data">
                 <label for="username">Nazwa użytkownika:</label><br>
                 <input type="text" id="username" name="username">
                 <br><br>
