--- a/aplication/templates/customer/start_page.html
+++ b/aplication/templates/customer/start_page.html
@@ -22,7 +22,25 @@
             </div>
 
             <div id="right">
-                $logowanie
+                {% if logged == True %}
+                    {% if unread_messages == True %}
+                        <a href="messages\">
+                            <button id = "messagesbutton" class="button_new_mes">Wiadomości [Nowe]</button></a> 
+                    {% else %}
+                        <a href="messages">
+                            <button id = "messagesbutton" class="button">Wiadomości</button></a>
+                    {% endif %}
+
+                    <a href="profile_page">
+                        <button class="button">Profil</button></a>
+                    <a href="log_out">
+                        <button class="button">Wyloguj się</button></a>
+                {% else %}
+                <a href="login_page">
+                    <button class="button">Zaloguj się</button></a>
+                <a href="register_page">
+                    <button class="button">Zarejestruj się</button></a>
+                {% endif %}
             </div> 
         </div>
         <br>
