poprawa wyglądu wiadomości

--- a/aplication/templates/admin/send_message.html
+++ b/aplication/templates/admin/send_message.html
@@ -13,7 +13,7 @@
         <div class="center">
             <h1>Wyślij wiadomość</h1>
             
-            <form method="POST" , enctype="multipart/form-data" action='/send_message'>
+            <form method="POST" , enctype="multipart/form-data" action='/admin/send_message'>
                 <label for="username">Login odbiorcy:</label><br>
                 <input type="text" id="username" name="username">
                 <br><br>
