--- a/aplication/static/css/styles.css
+++ b/aplication/static/css/styles.css
@@ -148,6 +148,20 @@ body{
     display: inline-block;
 }
 
+.scroll {
+    height: 500px; 
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.message {
+    width: 95%;
+    padding: 6px 10px;
+    border-radius: 10px;
+    margin: auto;
+    background-color: #f1f1f1; 
+}
+
 input {
     border: 1px solid transparent;
     background-color: #f1f1f1;
