--- a/aplication/templates/customer/car_info.html
+++ b/aplication/templates/customer/car_info.html
@@ -37,7 +37,7 @@
             <div id="right">
                 {% if logged == True %}
                 {% if unread_messages == True %}
-                    <a href="messages\">
+                    <a href="messages">
                         <button id = "messagesbutton" class="button_new_mes">Wiadomości [Nowe]</button></a> 
                 {% else %}
                     <a href="messages">
