--- a/aplication/templates/customer/make_reservation.html
+++ b/aplication/templates/customer/make_reservation.html
@@ -44,7 +44,7 @@
               {% else %}
                 <a href="login_page">
                     <button class="button">Zaloguj się</button></a>
-                <a href="register_page">
+                <a href="register">
                     <button class="button">Zarejestruj się</button></a>
               {% endif %}
             </div> 
