--- a/aplication/templates/customer/offer.html
+++ b/aplication/templates/customer/offer.html
@@ -37,7 +37,7 @@
               {% else %}
                 <a href="login_page">
                     <button class="button">Zaloguj się</button></a>
-                <a href="register_page">
+                <a href="register">
                     <button class="button">Zarejestruj się</button></a>
               {% endif %}
             </div>
