--- a/aplication/templates/customer/profile_page.html
+++ b/aplication/templates/customer/profile_page.html
@@ -44,6 +44,7 @@
         <div class="padlogin">
             <div class="center">
                 <h1>Mój profil</h1>
+                <h2> {{ username }}</h2>
                 
                 {% if role == 'client' %}
                 <a href="/data_edit">
